# CG-DX12

./: CMakeLists.txt
h/: CameraConstants.h  DirectXApp.h  Gbuffer.h  InputDevice.h  Light.h  Material.h  MathHelper.h  ObjectConstants.h  Parser.h  RenderingSystem.h  Submesh.h  TgaLoader.h  ThrowIfFailed.h  Timer.h  UploadBuffer.h  Vertex.h  Window.h  d3dUtil.h
src/: DirectXApp.cpp  Gbuffer.cpp  InputDevice.cpp  Parser.cpp  RenderingSystem.cpp  TgaLoader.cpp  Timer.cpp  Window.cpp  d3dUtil.cpp  lighting.hlsl  main.cpp  shaders.hlsl
